--- a/groupchat.gui/groupchat.gui.csproj
+++ b/groupchat.gui/groupchat.gui.csproj
@@ -23,4 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\groupchat.core\groupchat.core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <AvaloniaResource Include="Assets\Fonts\SpaceMono-*.ttf"/>
+</ItemGroup>
 </Project>
