--- a/groupchat.core/groupchat.core.csproj
+++ b/groupchat.core/groupchat.core.csproj
@@ -7,4 +7,8 @@
         <OutputType>Library</OutputType>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="10.0.0-rc.1.25451.107" />
+    </ItemGroup>
+
 </Project>
