flash taskbar icon when new message received

--- a/groupchat.gui/groupchat.gui.csproj
+++ b/groupchat.gui/groupchat.gui.csproj
@@ -29,6 +29,8 @@
     <AvaloniaResource Include="Assets/Fonts/SpaceMono-*.ttf"/>
 	<AvaloniaResource Include="Assets/sigma.png" />
 	<AvaloniaResource Include="Assets/sigma.ico" />
+        <AvaloniaResource Include="Assets/sigma_urgent_orange.png" />
+	<AvaloniaResource Include="Assets/sigma_urgent_red.png" />
    </ItemGroup>
 
    <ItemGroup>
