--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -143,4 +143,4 @@ jobs:
             GroupChat-linux-x64
             GroupChat-osx-arm64.zip
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_RELEASE_TOKEN }}
